[gd_scene load_steps=9 format=3 uid="uid://cpwp4xx6mv5p"]

[ext_resource type="Script" uid="uid://dopyo7y588l7r" path="res://addons/GodotTools/webrtc_signaling/ui/client_ui.gd" id="1"]
[ext_resource type="Script" uid="uid://cfgcyyb8hg7re" path="res://addons/GodotTools/webrtc_signaling/client/multiplayer_client.gd" id="2"]
[ext_resource type="Script" uid="uid://dgwrvhb6ws5ss" path="res://addons/GodotTools/webrtc_signaling/ui/multiprocess.gd" id="2_nwvpy"]
[ext_resource type="Script" uid="uid://cpy6eglnf65da" path="res://addons/GodotTools/webrtc_signaling/ui/room_tab_container.gd" id="3_1n8go"]
[ext_resource type="Script" uid="uid://b8idntjaigery" path="res://addons/GodotTools/webrtc_signaling/ui/playerinfo/playerinfo.gd" id="3_ikfcm"]
[ext_resource type="Script" uid="uid://dkbofririgxoe" path="res://addons/GodotTools/webrtc_signaling/ui/player_list.gd" id="4_blxr0"]
[ext_resource type="Script" uid="uid://bd441qkfic0y1" path="res://addons/GodotTools/webrtc_signaling/ui/authority_actions.gd" id="4_dx57n"]
[ext_resource type="PackedScene" uid="uid://1tk7mqago26t" path="res://addons/GodotTools/ui/options_menu/options_menu.tscn" id="5_chhbd"]

[node name="ClientUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Multiprocess" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_nwvpy")

[node name="PlayerInfo" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ikfcm")
metadata/_custom_type_script = "uid://b8idntjaigery"

[node name="Client" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
current_tab = 0
tabs_visible = false
script = ExtResource("3_1n8go")

[node name="Host Join UI" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Connect" type="HBoxContainer" parent="VBoxContainer/TabContainer/Host Join UI"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Host Join UI/Connect"]
layout_mode = 2
text = "Signaling Server URL:"

[node name="Host" type="LineEdit" parent="VBoxContainer/TabContainer/Host Join UI/Connect"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ws://localhost:9080"

[node name="Mesh" type="CheckBox" parent="VBoxContainer/TabContainer/Host Join UI/Connect"]
unique_name_in_owner = true
visible = false
layout_mode = 2
button_pressed = true
text = "Mesh"

[node name="MultiprocessCheckbox" type="CheckBox" parent="VBoxContainer/TabContainer/Host Join UI/Connect"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Multiprocess"

[node name="Options" type="Button" parent="VBoxContainer/TabContainer/Host Join UI/Connect"]
layout_mode = 2
text = "âš™"

[node name="PopupPanel" type="PopupPanel" parent="VBoxContainer/TabContainer/Host Join UI/Connect/Options"]
auto_translate_mode = 1
title = "Options"
initial_position = 2
size = Vector2i(1000, 500)
unresizable = false
borderless = false

[node name="OptionsMenu" parent="VBoxContainer/TabContainer/Host Join UI/Connect/Options/PopupPanel" instance=ExtResource("5_chhbd")]
offset_right = 1000.0
offset_bottom = 500.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Host Join UI"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2"]
layout_mode = 2
text = "Host Room"

[node name="Refresh" type="Button" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2"]
layout_mode = 2
text = "Refresh Room List"

[node name="Start Game" type="Button" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2"]
layout_mode = 2
text = "Start Single Player Game"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Host Join UI"]
visible = false
layout_mode = 2

[node name="Room" type="Label" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "Room:"

[node name="RoomSecret" type="LineEdit" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "code"

[node name="Join Room" type="Button" parent="VBoxContainer/TabContainer/Host Join UI/HBoxContainer"]
layout_mode = 2
text = "Join Room
"

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Host Join UI"]
layout_mode = 2
text = "Room List:"

[node name="RoomList" type="ItemList" parent="VBoxContainer/TabContainer/Host Join UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="In Room UI" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/In Room UI"]
layout_mode = 2

[node name="Stop" type="Button" parent="VBoxContainer/TabContainer/In Room UI/HBoxContainer"]
layout_mode = 2
text = "Leave"

[node name="Peers" type="Button" parent="VBoxContainer/TabContainer/In Room UI/HBoxContainer"]
visible = false
layout_mode = 2
text = "Print peers"

[node name="AuthorityActions" type="HBoxContainer" parent="VBoxContainer/TabContainer/In Room UI/HBoxContainer"]
layout_mode = 2
script = ExtResource("4_dx57n")

[node name="Start Game" type="Button" parent="VBoxContainer/TabContainer/In Room UI/HBoxContainer/AuthorityActions"]
layout_mode = 2
text = "Start Game"

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/In Room UI"]
layout_mode = 2
text = "Players:"

[node name="PlayerList" type="ItemList" parent="VBoxContainer/TabContainer/In Room UI"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
script = ExtResource("4_blxr0")

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/TabContainer/Host Join UI/Connect/Options" to="VBoxContainer/TabContainer/Host Join UI/Connect/Options/PopupPanel" method="popup"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Host Join UI/HBoxContainer2/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Host Join UI/HBoxContainer/Join Room" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/In Room UI/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/In Room UI/HBoxContainer/Peers" to="." method="_on_peers_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/In Room UI/HBoxContainer/AuthorityActions/Start Game" to="." method="_on_start_game_pressed"]
